unpackaged/main/default/objects/Account_Tag__c/Account_Tag__c.object-meta.xml
<CustomObject>
    <description>Used for tagging Account records with global list classifications (i.e. Fortune 500, S&amp;P 500 etc...)</description>
    <label>Account Tag</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Account Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>