unpackaged/main/default/objects/Account_Tag__c/fields/Creator_Role__c.field-meta.xml
<CustomField>
    <fullName>Creator_Role__c</fullName>
    <label>Creator Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>