unpackaged/main/default/objects/Account_Tag__c/fields/Creator_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Creator_Subteam__c</fullName>
    <label>Creator Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>