unpackaged/main/default/objects/Account_Tag__c/fields/Creator_Team__c.field-meta.xml
<CustomField>
    <fullName>Creator_Team__c</fullName>
    <label>Creator Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>