unpackaged/main/default/objects/Account_Tag__c/fields/Segment_Override__c.field-meta.xml
<CustomField>
    <fullName>Segment_Override__c</fullName>
    <label>Segment Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>